@@ -37,6 +37,8 @@ if (!defined($Cpuset_name)){
     exit(2);
 }
 
+my $Cpuset_path = "/oar/";
+
 # From now, "Cpuset" is of the form: 
 # $Cpuset = {
 #               name => "cpuset name",
@@ -55,16 +57,27 @@ if ($ARGV[0] eq "init"){
             exit(4);
         }
     }
- 
+    if (!(-d '/dev/cpuset/oar')){
+        if (system( 'sudo mkdir -p /dev/cpuset/oar &&'. 
+                    'sudo chown -R oar /dev/cpuset/oar &&'.
+                    '/bin/echo 0 | cat > /dev/cpuset/oar/notify_on_release && '.
+                    '/bin/echo 0 | cat > /dev/cpuset/oar/cpu_exclusive && '.
+                    'cat /dev/cpuset/mems > /dev/cpuset/oar/mems &&'.
+                    'cat /dev/cpuset/cpus > /dev/cpuset/oar/cpus'
+                  )){
+            exit(4);
+        }
+    }
+    
 #'for c in '."@Cpuset_cpus".';do cat /sys/devices/system/cpu/cpu$c/topology/physical_package_id > /dev/cpuset/'.$Cpuset_name.'/mems; done && '.
 
 # Be careful with the physical_package_id. Is it corresponding to the memory banc?
-    if (system( 'sudo mkdir -p /dev/cpuset/'.$Cpuset_name.' && '.
-                'sudo chown -R oar /dev/cpuset/'.$Cpuset_name.' && '.
-                '/bin/echo 0 | cat > /dev/cpuset/'.$Cpuset_name.'/notify_on_release && '.
-                '/bin/echo 0 | cat > /dev/cpuset/'.$Cpuset_name.'/cpu_exclusive && '.
-                'cat /dev/cpuset/mems > /dev/cpuset/'.$Cpuset_name.'/mems && '.
-                '/bin/echo '.join(",",@Cpuset_cpus).' | cat > /dev/cpuset/'.$Cpuset_name.'/cpus'
+    if (system( 'sudo mkdir -p /dev/cpuset'.$Cpuset_path.$Cpuset_name.' && '.
+                'sudo chown -R oar /dev/cpuset'.$Cpuset_path.$Cpuset_name.' && '.
+                '/bin/echo 0 | cat > /dev/cpuset'.$Cpuset_path.$Cpuset_name.'/notify_on_release && '.
+                '/bin/echo 0 | cat > /dev/cpuset'.$Cpuset_path.$Cpuset_name.'/cpu_exclusive && '.
+                'cat /dev/cpuset/mems > /dev/cpuset'.$Cpuset_path.$Cpuset_name.'/mems && '.
+                '/bin/echo '.join(",",@Cpuset_cpus).' | cat > /dev/cpuset'.$Cpuset_path.$Cpuset_name.'/cpus'
               )){
         exit(5);
     }
@@ -157,15 +170,15 @@ if ($ARGV[0] eq "init"){
 
     # Clean cpuset on this node
 
-    system('PROCESSES=$(cat /dev/cpuset/'.$Cpuset_name.'/tasks)
+    system('PROCESSES=$(cat /dev/cpuset'.$Cpuset_path.$Cpuset_name.'/tasks)
             while [ "$PROCESSES" != "" ]
             do
                 sudo kill -9 $PROCESSES
-                PROCESSES=$(cat /dev/cpuset/'.$Cpuset_name.'/tasks)
+                PROCESSES=$(cat /dev/cpuset'.$Cpuset_path.$Cpuset_name.'/tasks)
             done'
           );
 
-    if (system('sudo rmdir /dev/cpuset/'.$Cpuset_name)){
+    if (system('sudo rmdir /dev/cpuset'.$Cpuset_path.$Cpuset_name)){
         # Uncomment this line if you want to use several network_address properties
         # which are the same physical computer (linux kernel)
         exit(0);
