@@ -280,6 +280,12 @@ SCHEDULER_AVAILABLE_SUSPENDED_RESOURCE_TYPE="default"
 # (default is cpuset_manager.pl which handles the linux kernel cpuset)
 #CPUSET_FILE="cpuset_manager.pl"
 
+# Path of the relative directory where the cpusets will be created on each
+# nodes(same value than in /proc/self/cpuset)
+# If you change the default value (/oar) then you have to edit the file
+# cpuset_manager.pl and change it accordingly.
+CPUSET_PATH="/oar"
+
 ###############################################################################
 
 #########
